--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
+  "name": "docker-puppeteer-tor",
+  "version": "1.0.0",
+  "description": "Docker Image with Puppeteer through Tor",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
-    "puppeteer": "5.5.0"
+    "puppeteer": "^6.0.0"
   }
 }
